# invaders

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/: dependabot.yml  pr-checks.yml
.github/workflows/: continuous-integration.yml  pr-checks.yml  release.yml
src/: app.rs  assets.rs  main.rs  points.rs  ui.rs
src/assets/: area.rs  bunker.rs  cannon.rs  invader.rs  invaders.rs  laser.rs  mod.rs  mystery_ship.rs  words.rs
src/points/: bunker.rs  cannon.rs  invaders.rs  letters.rs  mod.rs  mystery_ship.rs
src/ui/: game.rs  mod.rs  start.rs  util.rs
