[package]
name = "invaders"
description = "A Space Invaders game TUI"
version = "0.0.3"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/mattdowdell/invaders"
license = "MIT"
categories = ["command-line-utilities", "games"]
keywords = ["games", "tui", "space invaders"]

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
crossterm = "0.27"
home = "0.5.5"
rand = "0.8.5"
tui = "0.19.0"
